--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 img {
     width: 100%;
+    height: auto;
+}
+.container {
+    display: grid;
+ /* grid-template-columns: repeat(3, 1fr);   */  
+    grid-template-columns: minmax(100px, 350px) 1fr minmax(100px, 350px);
+    grid-auto-rows: minmax(100px, auto);
+    grid-gap: 10px;
 }
